parking-algorithm.yaml
apiVersion: v1

apiVersion: apps/v1
kind: Deployment
metadata:
  name: parking-algorithm
spec:
  replicas: 1
  selector:
    matchLabels:
      app: parking-algorithm
  template:
    metadata:
      labels:
        app: parking-algorithm
    spec:
      containers:
      - name: parking-algorithm-video-engine
        image: harbor.tslsmart.x/ai-team/video-engine:V2.8.0
        # command: ["tail"]
        # args: ["-f", "/dev/null"]
        ports:
        - containerPort: 9397
        volumeMounts:
        - name: config-volume
          mountPath: /engine/config
      imagePullSecrets:
      - name: harbor-tslsmart-x
      volumes:
      - name: config-volume
        persistentVolumeClaim:
          claimName: config-pvc

---

apiVersion: v1
kind: Service
metadata:
  name: parking-algorithm
spec:
  type: NodePort
  selector:
    app: parking-algorithm
  ports:
    - protocol: TCP
      port: 80
      targetPort: 9397
