ingress-https.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: https-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - spatial-dim-6.org
    secretName: ingress-secret
  rules:
  - host: spatial-dim-6.org
    http:
      paths:
      # - path: /assets(/|$)(.*)
      - path: /(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: web
            port:
              number: 80
      - path: /hello
        pathType: Prefix
        backend:
          service:
            name: hello
            port:
              number: 8080
